# nxminer

./: .clang-format  .formatted-files  .gitignore  API-README  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  api.c  cgminer.c  compat.h  configure.ac  driver-cpu.c  driver-cpu.h  elist.h  example.conf  logging.c  logging.h  miner.h  sha256_generic.c  uint256.c  uint256.h  util.c  util.h
compat/jansson-2.5/: .gitignore  configure.ac
depends/: Makefile  funcs.mk
depends/terminfo/: terminfo.src
doc/: FAQ.md  build-unix.md  build-windows.md
echelon/: echelon.c  echelon.h
gpu/: adl.c  adl.h  adl_functions.h  driver-opencl.c  driver-opencl.h  findnonce.c  findnonce.h  ocl.c  ocl.h
gpu/opencl/: cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_ext.h  cl_icd.h  cl_va_api_media_sharing_intel.h  cl_version.h
linter/: clang-format.py
m4/: extensions.m4
secp256k1/include/: secp256k1.h
secp256k1/src/: ecmult.h  ecmult_gen.h  field_10x26.h  field_5x52.h  group.h  scalar_4x64.h  scalar_8x32.h  scalar_low.h  secp256k1.c  util.h
